--- a/density_change.ipynb
+++ b/density_change.ipynb
@@ -13,7 +13,7 @@
     "import GH _RuntimeMessageLevel as rmi \n",
     "import ghpythonlib.components as ghc\n",
     "\n",
-    "# length of ilnes\n",
+    "# length of lines\n",
     "linex = 0.866*line\n",
     "liney = 0.5*line\n",
     "\n",
@@ -21,7 +21,7 @@
     "Yjump = line + space\n",
     "Xjump = 1.732*line + 2*space\n",
     "\n",
-    "# defune data structures\n",
+    "# define data structures\n",
     "patterns = []\n",
     "lines = []\n",
     "temp_pattern = []\n",
@@ -31,7 +31,7 @@
     "for x in range(Xcount) :\n",
     "    for y in range(Ycount):\n",
     "\n",
-    "        # create cener point\n",
+    "        # create center point\n",
     "        ptX = x*Xjump\n",
     "        pty = y*Yjump\n",
     "        ptCenter = rg.Point3d(ptx, pty,0)\n",
@@ -82,9 +82,9 @@
     "        lines.append (line2. ToNurbsCurve())\n",
     "        lines.append(line3.ToNurbsCurve())\n",
     "\n",
-    "        # ere a curves t one array\n",
+    "        # merge all curves to one array\n",
     "        temp_pattern.append(linel.ToNurbsCurve())\n",
-    "        temp_pattern.append (line2.ToNurbsCurve())\n",
+    "        temp_pattern.append(line2.ToNurbsCurve())\n",
     "        temp_pattern,append(line3. ToNurbsCurve())\n",
     "        patterns. append (temp_pattern)\n",
     "        temp_pattern = []\n",
@@ -95,7 +95,7 @@
     "height = pty + 9*liney\n",
     "rectangle = rg.Rectangle3d(plane, width, height)\n",
     "    \n",
-    "# crate an offset to the pattern\n",
+    "# create an offset to the pattern\n",
     "for x in lines: #patterns\n",
     "offset_line = x.Offset(rg-Plane.WorldY, dis_crv, 0.001, rg.Curve0ffsetCornerStyle.Sharp)\n",
     "    if offset_line:\n",
